<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TrAccNo"
        android:layout_width="153dp"
        android:layout_height="726dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="4dp"
        android:text="@string/trlist_trAccNo"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/BenefAccNo" />

    <TextView
        android:id="@+id/Amount"
        android:layout_width="76dp"
        android:layout_height="729dp"
        android:text="@string/trlist_amount"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/BenefAccNo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/trlist_benefAcc"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>