<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/sky"
    android:layout_height="match_parent"
    tools:context=".AddTransations">

    <TextView
        android:id="@+id/textTransFrom"
        android:layout_width="186dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:text="@string/trans_from"
        android:textColor="#0B0B0B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="101dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:text="@string/Trans_Acc"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTransFrom" />

    <EditText
        android:id="@+id/idTransAccNo"
        android:layout_width="247dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textTransFrom"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="164dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/Trans_To"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="118dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:text="@string/Trans_Amount"
        android:textColor="#070707"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/idTransAmount"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="115dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:text="@string/Benef_AccNo"
        android:textColor="#040404"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/idBenefAccNo"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/idTransAmount"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/idBtnInsert"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:layout_marginBottom="104dp"
        android:background="@color/blue"
        android:text="@string/IdBtnInsert"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>